refactor(jpa): 重构实体字段提取和方言检测机制
- 将实体字段提取逻辑抽取为独立的 EntityFieldExtractor 类
- 实现方言检测器 DialectDetector 统一方言识别逻辑
- 优化 H2 专用 UPSERT 实现的参数类型一致性
- 移除过时的字段缓存机制，改用新的提取器架构
- 更新相关测试用例适配新的参数类型定义